feat(auth): added getUser()
